# mobile-solar-panels

cloud/: Dockerfile  db_sensors.py  docker-compose.yml
cloud/mosquitto/config/: mosquitto.conf  password.txt
cloud/src/: config.toml  db_sensors.py  mqtt_to_postgres.py  requirements.txt
edge-rasp/: Dockerfile  config.toml  docker-compose.yml  edge.py  raspberrypi-network-setup.txt
edge-rasp/anomaly-data/: data-labels.txt  data.csv  hyperparameters.py
edge-rasp/mosquitto/config/: mosquitto.conf
edge-rasp/src/: anomaly_detection.py  benchmark.py  coap.py  config.toml  control.html  db.py  edge.py  geolocation.html  http_server.py  mail.py  model.py  mqtt.py  requirements.txt
iot-esp/: .gitdpod.Dockerfile  Cargo.toml
iot-esp/.devcontainer/: devcontainer.json
iot-esp/docs/: README.md
iot-esp/scripts/: build.sh  flash.sh  run-wokwi.sh
iot-esp/src/: main.rs
iot-esp/src/control/: lighttracking.rs  mod.rs
iot-esp/src/networking/: coap.rs  mod.rs  wifi.rs
iot-esp/src/sensors/: adc.rs  mod.rs  motor.rs  temperature.rs
