[package]
name = "iot-esp"
version = "0.1.0"
authors = ["Florian Freund <florian88freund@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
esp-idf-svc = "0.41.3"
esp-idf-hal = "0.37.4"
embedded-hal = "0.2.7"
log = "0.4.17"
adc-interpolator = "0.2.0"
embedded-svc = "0.21.2"
coap-lite = "0.9.0"
embedded-drivers = { git = "https://github.com/youduda/embedded-drivers" }
ina219 = { git = "https://github.com/youduda/ina219", rev = "f13f27a" }

[build-dependencies]
embuild = "0.29.1"
anyhow = "1"
